# lab2sem2

./: .gitignore  BitSequence.hpp  CMakeLists.txt  DynamicArray.hpp  ImmutableArraySequence.hpp  ImmutableListSequence.hpp  LinkedList.hpp  MutableArraySequence.hpp  MutableListSequence.hpp  Sequence.hpp  SequenceAlgorithms.hpp  SequenceBuilder.hpp  lab2.files  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  test.cpp
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
include/: Bit.hpp  BitSequence.hpp  DynamicArray.hpp  Exceptions.hpp  ImmutableArraySequence.hpp  ImmutableListSequence.hpp  LinkedList.hpp  MutableArraySequence.hpp  MutableListSequence.hpp  Sequence.hpp  SequenceAlgorithms.hpp  mainwindow.hpp  mainwindow_impl.hpp
source/: main.cpp  mainwindow.cpp  mainwindow.ui  test.cpp  test_array_sequence.cpp  test_common.hpp  test_list_sequence.cpp
tests/: test_array_sequence.cpp  test_bit_sequence.cpp  test_common.hpp  test_list_sequence.cpp  test_main.cpp  test_map_reduce.cpp
